SERVER-53332 Change ShardRegistry::_connStringLookup to store connection strings as std::strings